[package]
name = "webserver"
version = "0.1.0"
authors = ["Roland Crosby <roland@rolandcrosby.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.0.0-alpha.1"
actix-rt = "1.1.0"
tokio-postgres = "0.5.3"
tokio = {version = "0.2", features = ["full"] }
bb8 = "0.4.2"
bb8-postgres = "0.4.0"
postgres-native-tls = "0.1.0-rc.1"
native-tls = "0.2.4"